Styling and layout updates

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,7 @@
-body {
-  margin: 0;
-  font-family: 'Helvetica', sans-serif;
-  color: #1939D6;
-  line-height: 1.4;
-}
-
-/* Resets */
+/** Resets **/
 h1,
 h2,
+h3,
 p {
   margin: 0;
 }
@@ -20,7 +14,6 @@ h1 {
 }
 h2 {
   font-size: 1.3em;
-  margin-bottom: 1em;
 }
 ul {
   padding: 0;
@@ -35,13 +28,23 @@ a:focus {
   text-decoration: none;
 }
 
+/** Style classes **/
 .container-width {
   width: 73%;
   margin: 0 auto;
 }
+.hover {
+  transition: color .15s;
+}
 
-
-/* Layout styles */
+/** Layout styles **/
+body {
+  margin: 0;
+  font-family: 'Helvetica', sans-serif;
+  color: #1939D6;
+  line-height: 1.4;
+}
+/* Nav */
 .container__nav {
   padding: 15px 0;
 }
@@ -53,6 +56,8 @@ a:focus {
   font-weight: 600;
   font-size: .8em;
 }
+
+/* Landing */
 .container__landing,
 .container__resume-header-content {
   display: flex;
@@ -83,10 +88,42 @@ a:focus {
   font-style: italic;
   margin-top: 5px;
 }
+.container__landing-content h2 {
+  margin-bottom: 1em;
+}
+.tw-icon:hover {
+  color: #1dcaff;
+}
+.ld-icon:hover {
+  color: #0077b5;
+}
+.gh-icon:hover {
+  color: #000;
+}
+.be-icon:hover {
+  color: #1769ff;
+}
+/* Resume */
 .container__resume-header {
-  background-color: #1939D6;
+  position: relative;
+  overflow: hidden;
   padding: 40px 0 70px 0;
   color: #fff;
+}
+.container__resume-header-bg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1939D6;
+  transform: skewY(-2deg);
+  transform-origin: top left;
+}
+.container__resume-header-content {
+  position: relative;
 }
 .container__resume-header img {
   width: 200px;
@@ -104,46 +141,53 @@ a:focus {
   text-align: center;
   font-size: .8em;
 }
-.container__work {
+.container__resume-main {
   padding: 3em 0;
+  display: flex;
 }
-.container__work h2 {
+.container__resume-main-skills {
+  box-shadow: 5px 0 5px -5px #d2d1d1;
+  padding-right: 30px;
+}
+.container__resume-main-work {
+  padding-left: 30px;
+}
+.container__resume-main h2 {
   text-transform: uppercase;
+  margin-bottom: 5px;
+  font-weight: 600;
 }
-.container__work-item {
-    border-left: 3px solid #f3f3f3;
-    padding-left: 20px;
-    margin-bottom: 40px;
+.container__resume-main h3 {
+  margin-bottom: 3px;
+  font-weight: 400;
 }
-.container__work-item li {
-  margin-bottom: 10px;
+.container__resume-main li,
+.container__resume-main p {
   font-weight: 100;
 }
-.container__work-item i {
+.container__resume-skills-list ul {
+  margin-bottom: 10px;
+}
+.container__resume-skills p {
+  font-size: .8em;
+  font-weight: 400;
+  color: #616060;
+}
+.container__work-item,
+.container__personal-projects-item {
+    margin-bottom: 30px;
+}
+.container__work-item i,
+.container__personal-projects-item i {
   margin-right: 10px;
   font-size: .8em;
-}
-.hover {
-  transition: color .15s;
-}
-.tw-icon:hover {
-  color: #1dcaff;
-}
-.ld-icon:hover {
-  color: #0077b5;
-}
-.gh-icon:hover {
-  color: #000;
-}
-.be-icon:hover {
-  color: #1769ff;
 }
 .company, 
 .dates {
   font-weight: 100;
 }
 .dates {
-  color: #bfbfbf;
+  color: #203080;
 }
 
 @media (max-width: 767px) {
