--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,18 @@ h3,
 p {
   margin: 0;
 }
+h1 {
+  font-size: 3.2em;
+}
+h2 {
+  font-size: 1.2em;
+}
+h3 {
+  font-size: 1.1em;
+}
 h2,
 p {
   font-weight: 100;
-}
-h1 {
-  font-size: 3em;
-}
-h2 {
-  font-size: 1.3em;
 }
 ul {
   padding: 0;
@@ -42,7 +45,8 @@ body {
   margin: 0;
   font-family: 'Helvetica', sans-serif;
   color: #1939D6;
-  line-height: 1.4;
+  line-height: 1.5;
+  font-size: 15px;
 }
 /* Nav */
 .container__nav {
@@ -56,7 +60,6 @@ body {
   font-weight: 600;
   font-size: .8em;
 }
-
 /* Landing */
 .container__landing,
 .container__resume-header-content {
@@ -131,6 +134,9 @@ footer li {
   border-radius: 50%;
   margin-right: 40px;
 }
+.container__resume-header-title h2 {
+  margin-bottom: 5px;
+}
 .container__resume-header-title ul {
   margin-top: 10px;
 }
@@ -138,9 +144,9 @@ footer li {
   margin-bottom: 3px;
 }
 .container__resume-header-title i {
-  width: 30px;
   text-align: center;
   font-size: .8em;
+  margin-right: 10px;
 }
 .container__resume-main {
   padding: 3em 0;
@@ -149,6 +155,7 @@ footer li {
 .container__resume-main-skills {
   box-shadow: 5px 0 5px -5px #d2d1d1;
   padding-right: 60px;
+  width: 40%;
 }
 .container__resume-main-work {
   padding-left: 60px;
@@ -157,9 +164,11 @@ footer li {
 	opacity: 0;
 }
 .container__resume-main h2 {
-  text-transform: uppercase;
-  margin-bottom: 5px;
   font-weight: 600;
+}
+.container__work-item h2 {
+  margin-bottom: 5px;
+  text-transform: uppercase;
 }
 .container__resume-main h3 {
   margin-bottom: 3px;
@@ -168,6 +177,9 @@ footer li {
 .container__resume-main li,
 .container__resume-main p {
   font-weight: 100;
+}
+.container__education li {
+  margin-bottom: 15px;
 }
 .container__resume-skills-list ul {
   margin-bottom: 10px;
@@ -195,6 +207,14 @@ footer li {
 .dates {
   color: #203080;
 }
+/* Portfolio */
+.container__portfolio {
+  padding: 60px 0;
+}
+.container__portfolio img {
+  width: 100%;
+  margin-bottom: 20px;
+}
 /* Footer */
 footer {
   background-color: #1939D6;
@@ -205,19 +225,19 @@ footer ul {
 }
 .copyright-section {
   padding: 10px 0;
-  font-size: .8em;
+  font-size: .9em;
 }
 footer li {
   width: 50px;
   height: 50px;
-  line-height: 50px;
+  line-height: 55px;
   text-align: center;
   background-color: #fff;
   border-radius: 50%;
   margin-right: 10px;
 }
 footer .fa {
-  font-size: 20px;
+  font-size: 18px;
 }
 footer p {
   color: #fff;
@@ -225,6 +245,61 @@ footer p {
 footer .copyright-section {
   background-color: #3e3d3d;
 }
+
+ /** Key frames for page animations **/
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+/** Basic styles for an animated element */
+.slide_element {
+  animation-duration: .8s;
+  transition-timing-function: ease-in;
+  animation-fill-mode: both;
+}
+
+/** Fades in */
+.slide_element--fadein {
+  animation-name: fadeIn;
+}
+
+/** Fades in and slides up */
+.slide_element--fadeinup {
+  animation-name: fadeInUp;
+}
+
+/** Fades in and slides from the right */
+.slide_element--fadeinright {
+  animation-name: fadeInRight;
+}
+
 
 @media (max-width: 992px) {
   .container__landing,
@@ -234,6 +309,7 @@ footer .copyright-section {
   }
   .container__resume-main-skills {
     box-shadow: none;
+    width: 100%;
   }
   .container__resume-main-skills,
   .container__resume-main-work {
