Added portfolio page

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/** Global variables **/
+:root {
+  --primary-color: #1939D6;
+}
+
 /** Resets **/
 h1,
 h2,
@@ -45,9 +50,12 @@ a:focus {
 body {
   margin: 0;
   font-family: 'Helvetica', sans-serif;
-  color: #1939D6;
+  color: var(--primary-color);
   line-height: 1.5;
   font-size: 15px;
+}
+h1 {
+  line-height: 1.2
 }
 /* Nav */
 .container__nav {
@@ -57,7 +65,7 @@ body {
   margin-right: 15px;
 }
 .container__nav li a {
-  color: #1939D6;
+  color: var(--primary-color);;
   font-weight: 600;
   font-size: .8em;
 }
@@ -98,7 +106,7 @@ body {
   margin-top: 5px;
 }
 .container__landing-content h2 {
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
 }
 .tw-icon:hover {
   color: #1dcaff;
@@ -127,7 +135,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #1939D6;
+  background-color: var(--primary-color);;
   transform: skewY(-2deg);
   transform-origin: top left;
 }
@@ -138,9 +146,6 @@ body {
   width: 200px;
   border-radius: 50%;
   margin-right: 40px;
-}
-.container__resume-header-title h1 {
-  line-height: 1;
 }
 .container__resume-header-title h2 {
   margin-bottom: 10px;
@@ -180,11 +185,6 @@ body {
 .container__resume-skills-list ul {
   margin-bottom: 10px;
 }
-.container__resume-skills p {
-  font-size: .8em;
-  font-weight: 400;
-  color: #616060;
-}
 .container__resume-main-work section {
     margin-bottom: 40px;
 }
@@ -213,23 +213,94 @@ body {
 .container__portfolio {
   padding: 60px 0;
 }
-.container__portfolio img {
-  width: 100%;
-  margin-bottom: 20px;
+.container__portfolio-tiles {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
 }
+.tile-container {
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 1px 0px 13px #e8e8e8;
+}
+.tile-container:nth-child(2) {
+  grid-area: 1 / 2 / 2 / 4;
+}
+.tile-container:nth-child(3) {
+  grid-area: 2 / 3 / 3 / 1;
+}
+.tile {
+  background-size: cover;
+  transition: all .3s;
+  position: relative;
+  height: 250px;
+  box-shadow: 1px 0px 13px #e8e8e8;
+}
+.tile-content {
+  display: none;
+  color: #fff;
+  padding: 90px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.tile-content h2 {
+  font-weight: 500;
+}
+.tile-content p {
+  font-size: 12px;
+}
+.tile-container:hover .tile {
+  transform: scale(1.1);
+}
+.tile-container:hover .tile-content {
+  display: block;
+} 
+.tile-container:hover .tile:before,
+.tile-container:focus .tile:before {
+  display: block;
+}
+
+.tile:before {
+  content: "";
+  display: none;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(28, 214, 212, 0.9);
+}
+.tile-1 {
+  background-image: url("../images/sim-health.png");
+}
+.tile-2 {
+  background-image: url("../images/navbuddy.png");
+}
+.tile-3 {
+  background-image: url("../images/donuts.png");
+}
+.tile-4 {
+  background-image: url("../images/fresh.png");
+}
+
 /* Footer */
 footer {
   text-align: center;
   font-weight: 100;
   font-size: 13px;
   padding: 15px 0;
+  background-color: var(--primary-color);;
+  color: #fff;
 }
 .footer-links {
-  background-color: #1939D6;
+  background-color: var(--primary-color);;
   text-align: center;
-}
-.footer-links ul {
-  padding: 80px 0;
+  padding: 70px 0 40px 0;
 }
 .footer-links li {
   margin-right: 20px;
@@ -303,7 +374,8 @@ footer p {
 @media (max-width: 992px) {
   .container__landing,
   .container__resume-header-content,
-  .container__resume-main {
+  .container__resume-main,
+  .container__portfolio-tiles {
     display: block;
   }
   .container__resume-main-skills {
@@ -327,6 +399,10 @@ footer p {
   .container__landing-img {
     text-align: center;
     margin-top: 30px;
+  }
+  .container__portfolio-tiles h1,
+  .tile-container {
+    margin-bottom: 15px;
   }
 }
 
