--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h1 {
   margin-right: 15px;
 }
 .container__nav li a {
-  color: var(--primary-color);;
+  color: var(--primary-color);
   font-weight: 600;
   font-size: .8em;
 }
@@ -76,7 +76,7 @@ h1 {
   align-items: center;
 }
 .container__landing {
-  padding: 6em 0 12em 0;
+  padding: 6em 0 8em 0;
   justify-content: space-between;
   height: 350px;
 }
@@ -135,7 +135,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--primary-color);;
+  background-color: var(--primary-color);
   transform: skewY(-2deg);
   transform-origin: top left;
 }
@@ -149,6 +149,16 @@ h1 {
 }
 .container__resume-header-title h2 {
   margin-bottom: 10px;
+}
+.container__resume-header-title ul li {
+  font-weight: 600;
+}
+.container__resume-header-title ul li i {
+  margin-right: 10px;
+}
+.container__resume-header-title .pdf-link {
+  display: inline-block;
+  margin-top: 10px;
 }
 .container__resume-main {
   padding: 3em 0;
@@ -294,11 +304,23 @@ footer {
   font-weight: 100;
   font-size: 13px;
   padding: 15px 0;
-  background-color: var(--primary-color);;
+  background-color: var(--primary-color);
+  color: #fff;
+}
+.footer-email {
+  border: 1px solid var(--primary-color);
+  padding: 10px 25px;
+  border-radius: 3px;
+  margin-bottom: 15px;
+  display: inline-block;
+  transition: all .2s;
+}
+.footer-email:hover {
+  background-color: var(--primary-color);
   color: #fff;
 }
 .footer-links {
-  background-color: var(--primary-color);;
+  background-color: var(--primary-color);
   text-align: center;
   padding: 70px 0 40px 0;
 }
