Update home line-heights and margins

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ h1 {
 }
 h2 {
   font-size: 1.3em;
+  line-height: 1.5;
 }
 h3 {
   font-size: 1.1em;
@@ -115,31 +116,28 @@ nav li a {
   font-size: 1.5em;
   padding-right: .8em;
 }
-.home ul {
-  margin-top: 20px;
+.home .home__content p:nth-child(3) {
+  margin-bottom: 20px;
 }
-.home__img img {
+.home .home__img img {
   border-radius: 50%;
 }
-.home__img p {
+.home .home__img p {
   font-size: .7em;
   font-style: italic;
   margin-top: 5px;
   text-align: center;
 }
-.home__content h2 {
-  margin-bottom: 1.5em;
-}
-.tw-icon:hover {
+.home .tw-icon:hover {
   color: #1dcaff;
 }
-.ld-icon:hover {
+.home .ld-icon:hover {
   color: #0077b5;
 }
-.gh-icon:hover {
+.home .gh-icon:hover {
   color: #000;
 }
-.be-icon:hover {
+.home .be-icon:hover {
   color: #1769ff;
 }
 
